--- a/w6d5-ui-performance-testing/Base.lproj/Main.storyboard
+++ b/w6d5-ui-performance-testing/Base.lproj/Main.storyboard
@@ -101,6 +101,7 @@
                                     </subviews>
                                 </tableViewCellContentView>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <accessibility key="accessibilityConfiguration" identifier="tableViewCell"/>
                                 <connections>
                                     <segue destination="vC3-pB-5Vb" kind="showDetail" identifier="showDetail" id="6S0-TO-JiA"/>
                                 </connections>
